fix: update api spec
